Allow user to quit by q-Enter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "proto-explorer"
-version = "0.3.3"
+version = "0.3.4"
 description = "A tool to visualize .proto file hierarchies"
 authors = [
     {name = "Lei Yuan",email = "lee14159@gmail.com"}
@@ -15,7 +15,7 @@ dependencies = [
     "protobuf (>=6.31.0,<7.0.0)",
     "grpcio-tools (>=1.75.0)",
     "streamlit (>=1.50.0,<2.0.0)",
-    "pytest (==8.2.0)"
+    "requests (>=2.0.0)",
 ]
 
 
